# pot-app-recognize-plugin-rapid

./: Cargo.toml  README.md  README_EN.md  info.json
.github/build-for-linux/: build.sh  entrypoint.sh
.github/workflows/: build.yml
PPOCR/models/: ch_ppocr_mobile_v2.0_cls_infer.onnx
src/: lib.rs
